<resources>
    <string name="app_name">WordDrop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mi_newGame">New Game</string>
    <string name="mi_quitGame">Quit Game</string>
    <string name="mi_exitApplication">Exit Game</string>
    <string name="purchasePowerUps">Purchase PowerUps</string>
    <string name="score">Score</string>
    <string name="gameScore">Game Score</string>
    <string name="totalScore">Total Score</string>
    <string name="scramblePurchase">Scramble Board (-250)</string>
    <string name="deleteColorPurchase">Delete Color (-250)</string>
    <string name="shrinkLetterPurchase">Shrink Letter (-150)</string>
    <string name="timedMode">Timed</string>
    <string name="movesMode">Moves</string>
    <string name="endlessMode">Endless</string>
    <string name="powerups">Powerups</string>
    <string name="choosePlayer">Choose Player</string>
    <string name="existingPlayer">Existing Player</string>
    <string name="newPlayer">New Player</string>
    <string name="nextBtn">Next</string>
    <string name="scramble">Scramble</string>
    <string name="deleteColor">Delete Color</string>
    <string name="shrinkLetter">Shrink Letter</string>
    <string name="playAgain">Play Again</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="lastSwipedWord">Last Swiped Word: </string>
    <string name="newUserCreated">New user created!</string>
    <string name="noUserSelected">No User Selected</string>
    <string name="noUserSelectedMsg">No User is selected. Please select a user or create a new one.</string>
    <string name="userRegistrationError">User Registration Error</string>
    <string name="userRegistrationErrorMsg">User name can not be of more than 15 characters.</string>
    <string name="userNameAlreadyExistMsg">User name already exists.</string>
    <string name="Ok">OK</string>
    <string name="Cancel">CANCEL</string>
    <string name="Yes">YES</string>
    <string name="No">NO</string>
    <string name="Buy">BUY</string>
    <string name="deleteColorHint">Deletes the cells containing the color of the selected cell.</string>
    <string name="shrinkLetterHint">Deletes only the selected cell.</string>
    <string name="selectColor">Select a color.</string>
    <string name="selectLetter">Select a letter.</string>
    <string name="powerUpAlert">Powerup Alert</string>
    <string name="powerUpAlertMsg">No more powerups left! Go and purchase powerups.</string>
    <string name="quitGameConfirm">Quit Game Confirmation</string>
    <string name="quitGameConfirmMsg">Do you really want to Quit game?</string>
    <string name="exitGameConfirm">Exit Game Confirmation</string>
    <string name="exitGameConfirmMsg">Do you really want to Exit game?</string>
    <string name="restartGameConfirm">Restart Game Confirmation</string>
    <string name="restartGameConfirmMsg">Do you really want to restart game?</string>
    <string name="timer">Timer</string>
    <string name="moves">Moves</string>
    <string name="scrambleMsg">Shuffles the cells on the grid. \n Are you sure you want to use scramble power up?</string>
    <string name="sorryScramblePower">Sorry, You Don\'t have enough score to purchase Scramble power up!</string>
    <string name="sorryDeleteColorPower">Sorry, You Don\'t have enough score to purchase Delete Color power up!</string>
    <string name="sorryShrinkLetterPower">Sorry, You Don\'t have enough score to purchase Shrink Letter power up!</string>
    <string name="swippedWordsLst">Swiped Words</string>
    <string name="showWordsBtn">Show Words</string>
</resources>