<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.android.worddrop.ModeSelectionActivity"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timedMode"
        android:id="@+id/btnTimed"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movesMode"
        android:id="@+id/btnMoves"
        android:layout_below="@+id/btnTimed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endlessMode"
        android:id="@+id/btnEndless"
        android:layout_below="@+id/btnMoves"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerups"
        android:id="@+id/btnPowerups"
        android:layout_below="@+id/btnEndless"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="btnPowerupsClick"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"/>

</RelativeLayout>
