<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GameOverActivity">

    <TextView android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
        android:id="@+id/txtViewScore" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewScore"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout">

        <TextView android:text="@string/gameScore"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#000000"
            android:id="@+id/txtViewGameSc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:textAlignment="center"/>


        <TextView android:text="@string/totalScore"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:id="@+id/txtViewTotalScore"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout1">

        <TextView android:text="0"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#000000"
            android:id="@+id/currScoreVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:textAlignment="center"/>


        <TextView android:text="0"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:id="@+id/totalScoreVal"
            android:textAlignment="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/customborder"
        android:id="@+id/relativeLayout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/powerups"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:stretchColumns="1"
            android:layout_marginTop="5dp"

           >

            <TableRow>
                <TextView
                    android:text="@string/scramble"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    />
                <TextView
                    android:text="@string/deleteColor"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    />
                <TextView
                    android:text="@string/shrinkLetter"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    />

            </TableRow>

            <TableRow>
                <TextView
                    android:text="0"
                    android:textAlignment="center"
                    android:id="@+id/tvScrambleCnt" />
                <TextView
                    android:text="0"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/tvDeleteColorCnt" />
                <TextView
                    android:text="0"
                    android:textAlignment="center"
                    android:gravity="right"
                    android:id="@+id/tvShrinkLetterCnt" />

            </TableRow>
        </TableLayout>


    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playAgain"
        android:id="@+id/btnPlayAgain"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:onClick="btnPlayAgainClick"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/btnHomeScreen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="btnHomeClick"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/btnExitGame"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="btnExitGameClick"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"/>


</RelativeLayout>
