<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.android.worddrop.PurchasePowerUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/purchasePowerUps"
        android:id="@+id/txtViewPurchasePw"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/totalScore"
        android:id="@+id/textView2"
        android:layout_below="@+id/txtViewPurchasePw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/txtTotalScore"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/scramblePurchase"
            android:id="@+id/textView3"
            android:layout_row="0"
            android:layout_column="0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/deleteColorPurchase"
            android:id="@+id/textView4"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/shrinkLetterPurchase"
            android:id="@+id/textView5"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="5"
            android:id="@+id/txtViewScramble"
            android:layout_row="0"
            android:layout_column="1"
            android:padding="20dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="3"
            android:id="@+id/txtViewDeleteColor"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="5"
            android:id="@+id/txtviewShrinkLetter"
            android:layout_row="2"
            android:layout_column="1"
            android:padding="20dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+5"
            android:id="@+id/btnPurchaseScramble"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="btnPurchaseScrambleClick"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+3"
            android:id="@+id/btnPurchaseDeleteColor"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="btnPurchaseDeleteColorClick"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+5"
            android:id="@+id/btnPurchaseShrinkLetter"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="btnPurchaseShrinkLetterClick"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/white"/>

    </GridLayout>


</RelativeLayout>
